--- a/.html
+++ b/.html
@@ -2,7 +2,11 @@
 <html lang="pt-br">
    <head>
         <meta charset="utf-8"/>
-        
+        <style>
+a{
+	color: red;
+}
+</style>
    </head>
     <body 
      <title></title>
